--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <article class="max-length">
+  <article class="max-length gutter-1-4">
     <header class="text-center">
       <h1 class="push-0 not-bold">QUEEN OF THE BLACK COAST</h1>
       <p class="italic">By Robert E. Howard, 1934</p>
       <hr>
     </header>
-    <h2 class="mega pad-t pad-b">1. Conan Joins the Pirates</h2>
+    <h2 class="mega pad-t-2 pad-b-2">1. Conan Joins the Pirates</h2>
     <blockquote>
       <p class="italic push-0">Believe green buds awaken in the spring,<br>That autumn paints the leaves with somber fire;<br>Believe I held my heart inviolate<br>To lavish on one man my hot desire.<br>
       </p>
